# friday

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  friday.cmd  pyproject.toml
src/friday/: __init__.py  app.py  cli.py  tools.py  tui.py  tui_gateway.py  tui_node.py
src/friday/prompt_templates/: SOUL.md  __init__.py
src/friday/prompts/: __init__.py  soul.md  user.md
tests/: test_cli.py  test_tools.py  test_tui.py  test_tui_gateway.py
ui-tui/: package-lock.json  package.json
ui-tui/src/: app.tsx  entry.tsx  gatewayClient.ts  markdown.tsx  types.ts
