[project]
name = "friday-agent"
version = "0.1.0"
description = "Friday, a personal CLI agent built on agent-core-runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-core-runtime",
]

[tool.uv.sources]
agent-core-runtime = { path = "../agent-core-runtime", editable = true }

[project.scripts]
friday = "friday.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]
